--- a/src/main/webapp/WEB-INF/views/adminLogin.html
+++ b/src/main/webapp/WEB-INF/views/adminLogin.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <title>Cemetery Listings</title>
-    <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/blackAndWhite.css">
+    <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/listing-pages.css">
     <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/login.css">
     <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/scripts/script.js"></script>
@@ -17,6 +17,9 @@
         <a href="/CemeteryListingsWebApp/" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo3.jpg"></a>
                 <ul class="navList" style="width : 100%">
                     <li><a href="/CemeteryListingsWebApp/">Home</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/cemetery/cemeterylistings">Cemetery Listings</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/DeceasedListing/publishedlistings">Deceased Listings</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/search/contactus">Contact Us</a></li>
                 </ul>   
             </div>
             <div class="dummyHeader"></div>
